Correctly align grid in header. Remove unnecessary code.

--- a/src/css/_appDetails.scss
+++ b/src/css/_appDetails.scss
@@ -13,6 +13,7 @@
   }
 
   .serviceCard {
+    margin-top: 8px;
     padding: 0 24px;
 
     > hr {
@@ -56,12 +57,21 @@
         display: grid;
         grid-gap: 16px;
         grid-template-columns: auto minmax(0, 1fr);
-        grid-template-rows: repeat(3, auto);
+        grid-template-rows: repeat(3, 24px);
         grid-auto-flow: column;
+        align-content: center;
 
         @media (max-width: 1240px) {
-          grid-template-columns: 1fr;
           grid-template-rows: repeat(6, auto);
+        }
+
+        .fa-comments-alt,
+        .fa-globe {
+          margin-right: 8px;
+        }
+
+        .fa-external-link {
+          margin-left: 8px;
         }
       }
 
